@@ -229,7 +229,7 @@ do_init() {
 			IS_TIMER=1
 			;;
 		3|10|i386/athlon|x86-64*)
-			DEFAULT_EVENT=RETIRED_INSNS
+			DEFAULT_EVENT=CPU_CLK_UNHALTED
 			;;
 		6|11|i386/p4*)
 			DEFAULT_EVENT=GLOBAL_POWER_EVENTS
@@ -506,7 +506,7 @@ do_options() {
 			esac
 		fi
 
-		if test "$CPU_TYPE" != "5" -a "$arg" = "--rtc-value"; then
+		if test "$CPUTYPE" != "5" -a "$arg" = "--rtc-value"; then
 			echo "Cannot use --rtc-value; RTC driver is not being used" >& 2
 			exit 1
 		fi
